--- a/package.json
+++ b/package.json
@@ -2,23 +2,29 @@
   "name": "my-kanban-board",
   "version": "0.1.0",
   "private": true,
+  "main": "public/electron.js",
+  "homepage": "./",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "electron": "^17.0.1",
+    "wait-on": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "dev": "concurrently \"BROWSER=none npm start\" \"wait-on http:localhost:3000 && electron ./\"",
+    "watch": "tsc -w -p electron/tsconfig.json",
+    "electron": "electron ./",
+    "electron-build": "tsc -p electron/tsconfig.json",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
