--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "public/electron.js",
   "homepage": "./",
   "dependencies": {
+    "@mantine/core": "^4.1.3",
+    "@mantine/hooks": "^4.1.3",
+    "@tabler/icons": "^1.64.0",
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-beautiful-dnd": "^13.1.2",
