--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "./",
   "dependencies": {
     "@mantine/core": "^4.1.3",
+    "@mantine/form": "^4.1.5",
     "@mantine/hooks": "^4.1.3",
     "@tabler/icons": "^1.64.0",
     "react": "^17.0.2",
@@ -20,9 +21,9 @@
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.11",
     "@types/uuid": "^8.3.4",
-    "typescript": "^4.5.5",
     "concurrently": "^7.0.0",
     "electron": "^17.0.1",
+    "typescript": "^4.5.5",
     "wait-on": "^6.0.1"
   },
   "scripts": {
